--- a/demo/src/app/app.component.html
+++ b/demo/src/app/app.component.html
@@ -8,7 +8,7 @@
         <img [hidden]="theme === 'dark'" src="assets/icon-light-off.svg">
       </mat-icon>
     </button>
-    <a mat-icon-button href="https://github.com/jfcere/ngx-markdown">
+    <a mat-icon-button href="https://github.com/revolucion/ngx-markdown">
       <img src="assets/icon-github.svg">
     </a>
   </mat-toolbar-row>
